--- a/client/src/Components/Home.css
+++ b/client/src/Components/Home.css
@@ -11,11 +11,14 @@
 .container {
     width: 100vw;
     height: 100vh;
+    display: grid;
+    grid-template-rows: 80% 20%;
+    position: relative;
 }
 
 .home_wrapper {
     width: 100vw;
-    height: 80%;
+    height: 100%;
     background-color: #FFFF93;
     border-bottom: 2px solid #ffff1b;
     display: grid;
@@ -37,13 +40,41 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
+    padding-top: 10px;
+    text-align: right;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
 }
 
-li {
-    display: inline;
+.nav_links {
+    height: 100%;
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+}
+
+nav ul li {
+    display: inline-block;
     font-family: Bajigoor;
     color: rgb(104, 104, 255);
-    text-align: center;
-    text-decoration: none;
-    justify-content: center;
-  }
+    font-size: 25px;
+}
+
+.transitioning {
+    width: 100%;
+    height: 100%;
+}
+
+#clouds {
+    height: 20%;
+    width: 100%;
+    position: absolute;
+    bottom: 10%;
+}
+
+.second_page {
+    height: 100vh;
+    width: 100vw;
+}
