--- a/client/src/Components/Feed.css
+++ b/client/src/Components/Feed.css
@@ -1,13 +1,112 @@
 .feed-container {
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     background-color: #F1F2F4;
+    display: flex;
+    flex-direction: column;
+}
+
+@font-face {
+    font-family: 'Klavika';
+    src: url('./Assets/klavika-bold.otf') format("opentype");
+}
+
+.nav-background-container {
+    height: 7.5vh;
+    width: 100vw;
+    background-color: white;
+}
+
+.nav-container {
+    height: 100%;
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: white;
 }
 
 .feed-content {
-    padding-top: 7.5vh;
-    height: 92.5vh;
+    flex-grow: 1;
     width: 100%;
     display: grid;
-    grid-template-columns: 30vw 50vw 20vw;
+    grid-template-columns: 27.5vw 42.5vw 30vw;
+    margin-top: 3vh;
+}
+
+.center {
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-rows: 20% 80%;
+}
+
+.user-post {
+    height: 100%;
+    width: 100%;
+    border-radius: 10px;
+    background-color: white;
+    display: grid;
+    grid-template-rows: 60% 40%; 
+}
+
+.post-text {
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 15% 85%;
+}
+
+.pfp {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.pfp-circle {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: blue;
+
+}
+
+.textbox {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+}
+
+.textbox > input {
+    width: 95%;
+    height: 60px;
+    border-radius: 50px;
+    border: 1px solid rgb(212, 212, 212);
+    display: block;
+    margin: 0 auto;
+}
+
+.post-options {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.option-container {
+    height: 100%;
+    width: 90%;
+    border-top: 1px solid rgb(233, 233, 233);
+}
+
+.posts {
+    height: 100%;
+    width: 100%;
+    overflow-y: auto;
 }
