--- a/client/src/Components/Home.css
+++ b/client/src/Components/Home.css
@@ -8,7 +8,7 @@ body {
     margin: 0;
 }
 
-.container {
+.home-container {
     width: 100vw;
     height: 100vh;
     display: grid;
@@ -16,7 +16,7 @@ body {
     position: relative;
 }
 
-.home_wrapper {
+.home-wrapper {
     width: 100vw;
     height: 100%;
     background-color: #FFFF93;
@@ -25,7 +25,7 @@ body {
     grid-template-rows: 10% 90%;
 }
 
-.image_wrapper {
+.image-wrapper {
     height: 100%;
     width: 100%;
     background-image: url(./images/final_background.png);
@@ -34,7 +34,7 @@ body {
     background-position: center;
 }
 
-.nav_bar {
+.nav-bar {
     height: 10vh;
     width: 100vw;
     list-style-type: none;
@@ -48,7 +48,7 @@ body {
     z-index: 1;
 }
 
-.nav_links {
+.nav-links {
     height: 100%;
     width: 80%;
     display: flex;
@@ -90,7 +90,7 @@ nav ul li {
     position: absolute;
 }
 
-.second_page {
+.second-page {
     height: 100vh;
     width: 100vw;
 }
