--- a/client/src/Components/Feed.css
+++ b/client/src/Components/Feed.css
@@ -2,13 +2,16 @@
     min-height: 100vh;
     width: 100vw;
     background-color: #F1F2F4;
-    display: flex;
-    flex-direction: column;
 }
 
 @font-face {
     font-family: 'Klavika';
     src: url('./Assets/klavika-bold.otf') format("opentype");
+}
+
+nav {
+    position: sticky;
+    top: 0;
 }
 
 .nav-background-container {
@@ -28,7 +31,6 @@
 }
 
 .feed-content {
-    flex-grow: 1;
     width: 100%;
     display: grid;
     grid-template-columns: 27.5vw 42.5vw 30vw;
@@ -39,11 +41,13 @@
     height: 100%;
     width: 100%;
     display: grid;
-    grid-template-rows: 20% 80%;
+    grid-template-rows: 20vh auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .user-post {
-    height: 100%;
+    height: 20vh;
     width: 100%;
     border-radius: 10px;
     background-color: white;
@@ -84,7 +88,8 @@
 
 .textbox > input {
     width: 95%;
-    height: 60px;
+    height: 10vh;
+    min-height: 50px;
     border-radius: 50px;
     border: 1px solid rgb(212, 212, 212);
     display: block;
@@ -106,7 +111,12 @@
 }
 
 .posts {
-    height: 100%;
+    flex-grow: 1;
     width: 100%;
-    overflow-y: auto;
+}
+
+.footer-space {
+    height: 10px;
+    width: 100%;
+    background-color:#F1F2F4;
 }
