--- a/client/src/Components/Feed.css
+++ b/client/src/Components/Feed.css
@@ -1,7 +1,7 @@
 .feed-container {
     min-height: 100vh;
     width: 100vw;
-    background-color: #F1F2F4;
+    background-color: #F3F2EF;
 }
 
 @font-face {
@@ -28,6 +28,26 @@ nav {
     align-items: center;
     justify-content: space-between;
     background-color: white;
+}
+
+.logo-link {
+    text-decoration: none;
+    font-size: 35px;
+    font-family: Klavika;
+}
+
+.search-bar > input {
+    width: 40vw;
+    height: 45px;
+    border-radius: 50px;
+    border: 1px solid rgb(212, 212, 212);
+    background-color: rgb(242, 242, 242);
+}
+
+.profile-link {
+    text-decoration: none;
+    font-size: 25px;
+    font-family: Klavika;
 }
 
 .feed-content {
@@ -74,8 +94,9 @@ nav {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: blue;
-
+    background-image: url('./images/testpfp.png');
+    background-size: contain;
+    background-repeat: none;
 }
 
 .textbox {
@@ -108,6 +129,9 @@ nav {
     height: 100%;
     width: 90%;
     border-top: 1px solid rgb(233, 233, 233);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .posts {
@@ -119,4 +143,42 @@ nav {
     height: 10px;
     width: 100%;
     background-color:#F1F2F4;
+}
+
+.side1 {
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.profile-corner {
+    height: 100%;
+    width: 80%;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.side2 {
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.community-tab {
+    height: 100%;
+    width: 80%;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.create-comm {
+    text-align: center;
+}
+
+input[type=search]{
+    padding-left: 20px;
 }
