--- a/client/src/Components/Home.css
+++ b/client/src/Components/Home.css
@@ -28,8 +28,16 @@ body {
 .image-wrapper {
     height: 100%;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.background-image {
+    height: 100%;
+    width: 100%;
     background-image: url(./images/final_background.png);
-    background-size: 60vw 65vh;
+    background-size: 800px 500px;
     background-repeat: no-repeat;
     background-position: center;
 }
