--- a/client/src/Components/Feed.css
+++ b/client/src/Components/Feed.css
@@ -4,50 +4,9 @@
     background-color: #F3F2EF;
 }
 
-@font-face {
-    font-family: 'Klavika';
-    src: url('./Assets/klavika-bold.otf') format("opentype");
-}
-
-nav {
+.navbar-import {
     position: sticky;
     top: 0;
-}
-
-.nav-background-container {
-    height: 7.5vh;
-    width: 100vw;
-    background-color: white;
-}
-
-.nav-container {
-    height: 100%;
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: white;
-}
-
-.logo-link {
-    text-decoration: none;
-    font-size: 35px;
-    font-family: Klavika;
-}
-
-.search-bar > input {
-    width: 40vw;
-    height: 45px;
-    border-radius: 50px;
-    border: 1px solid rgb(212, 212, 212);
-    background-color: rgb(242, 242, 242);
-}
-
-.profile-link {
-    text-decoration: none;
-    font-size: 25px;
-    font-family: Klavika;
 }
 
 .feed-content {
@@ -67,12 +26,10 @@ nav {
 }
 
 .user-post {
-    height: 20vh;
+    height: 15vh;
     width: 100%;
     border-radius: 10px;
     background-color: white;
-    display: grid;
-    grid-template-rows: 60% 40%; 
 }
 
 .post-text {
@@ -115,23 +72,6 @@ nav {
     border: 1px solid rgb(212, 212, 212);
     display: block;
     margin: 0 auto;
-}
-
-.post-options {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.option-container {
-    height: 100%;
-    width: 90%;
-    border-top: 1px solid rgb(233, 233, 233);
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
 }
 
 .posts {
