--- a/client/src/Components/Subcomponents/Posts.css
+++ b/client/src/Components/Subcomponents/Posts.css
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 5vh;
+    border: 1px solid rgb(213, 213, 213);
 }
 
 .detail-link {
