--- a/client/src/Components/Feed.css
+++ b/client/src/Components/Feed.css
@@ -76,8 +76,8 @@
 .posts {
     width: 100%;
     overflow-y: scroll;
-    scrollbar-width: none;  /* Firefox */
-    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
 
 .posts::-webkit-scrollbar {
