--- a/client/src/Components/Subcomponents/Navbar.css
+++ b/client/src/Components/Subcomponents/Navbar.css
@@ -17,12 +17,16 @@ nav {
 
 .nav-container {
     height: 100%;
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 27.5vw 42.5vw 30vw;
     background-color: white;
+}
+
+.logo-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .logo-link {
@@ -31,12 +35,24 @@ nav {
     font-family: Klavika;
 }
 
+.search-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .search-bar > input {
-    width: 40vw;
+    width: 100%;
     height: 45px;
     border-radius: 50px;
     border: 1px solid rgb(212, 212, 212);
     background-color: rgb(242, 242, 242);
+}
+
+.s-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .profile-link {
