--- a/client/src/Components/Feed.css
+++ b/client/src/Components/Feed.css
@@ -1,5 +1,5 @@
 .feed-container {
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     background-color: #F3F2EF;
 }
@@ -20,7 +20,7 @@
     height: 100%;
     width: 100%;
     display: grid;
-    grid-template-rows: 15vh 70vh;
+    grid-template-rows: 15vh auto;
 }
 
 .user-post {
@@ -60,7 +60,7 @@
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: center;
 }
 
 .textbox > input {
@@ -74,8 +74,8 @@
 }
 
 .posts {
+    flex-grow: 1;
     width: 100%;
-    overflow-y: scroll;
     scrollbar-width: none;
     -ms-overflow-style: none;
 }
@@ -85,7 +85,7 @@
 }
 
 .footer-space {
-    height: 10px;
+    height: 20px;
     width: 100%;
     background-color:#F3F2EF;
     border-top: 1px solid rgb(213, 213, 213);
@@ -93,32 +93,34 @@
 
 .side1 {
     width: 100%;
-    height: 50vh;
+    height: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 .profile-corner {
-    height: 100%;
+    height: 50vh;
     width: 80%;
     background-color: white;
     border-radius: 10px;
+    position: sticky;
+    top: 10vh;
 }
 
 .side2 {
     width: 100%;
-    height: 80vh;
+    height: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 .community-tab {
-    height: 100%;
+    height: 80vh;
     width: 80%;
     background-color: white;
     border-radius: 10px;
+    position: sticky;
+    top: 10vh;
 }
 
 .create-comm {
