--- a/client/src/Components/Login.css
+++ b/client/src/Components/Login.css
@@ -4,10 +4,13 @@
     align-items: center;
     width: 100vw;
     height: 100vh;
-    background-image: url('./images/pathbackground.jpeg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+  }
+
+  #loginauth {
+    background-image: url('./images/pathbackground.jpeg');
   }
   
   .Auth-form {
