--- a/client/src/Components/Signup.css
+++ b/client/src/Components/Signup.css
@@ -1,13 +1,3 @@
-.register-container {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-}
-
-.register-form {
-    height: 50vh;
-    width: 50vh;
+#signupauth {
+    background-image: url('./images/pathbackgrounddark.png');
 }
