--- a/client/src/Components/Subcomponents/Navbar.css
+++ b/client/src/Components/Subcomponents/Navbar.css
@@ -9,18 +9,19 @@ nav {
 }
 
 .nav-background-container {
-    height: 7.5vh;
+    min-height: 7.5vh;
     width: 100vw;
-    background-color: white;
-    border-bottom: 1px solid rgb(213, 213, 213);
+    background-color: rgb(103, 128, 255);
+    border-bottom: 1px solid rgb(71, 102, 255);
 }
 
 .nav-container {
+    padding-top:3px;
     height: 100%;
     width: 100%;
     display: grid;
     grid-template-columns: 27.5vw 42.5vw 30vw;
-    background-color: white;
+    background-color: rgb(103, 128, 255);
 }
 
 .logo-div {
@@ -31,8 +32,10 @@ nav {
 
 .logo-link {
     text-decoration: none;
-    font-size: 35px;
+    font-size: 45px;
     font-family: Klavika;
+    color: white;
+    -webkit-text-stroke: 1px #e2e2e2;
 }
 
 .search-bar {
@@ -46,7 +49,7 @@ nav {
     height: 45px;
     border-radius: 50px;
     border: 1px solid rgb(212, 212, 212);
-    background-color: rgb(242, 242, 242);
+    background-color: rgb(255, 255, 255);
 }
 
 .s-button {
@@ -57,6 +60,8 @@ nav {
 
 .profile-link {
     text-decoration: none;
-    font-size: 25px;
+    font-size: 35px;
     font-family: Klavika;
+    color: white;
+    -webkit-text-stroke: 1px #e2e2e2;
 }
