--- a/client/src/Components/Subcomponents/Posts.css
+++ b/client/src/Components/Subcomponents/Posts.css
@@ -1,5 +1,5 @@
 .indiv-post-container {
-    height: 20vh;
+    min-height: 15vh;
     width: 100%;
     background-color: white;
     display: flex;
@@ -10,14 +10,22 @@
 }
 
 .detail-link {
-    width: 80%;
-    height: 90%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    min-height: inherit;
+    text-decoration: none;
+    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.post-content {
-    height: 100%;
+.indiv-post {
+    min-height: inherit;
     width: 100%;
+}
+
+.post-content > h5 {
+    max-height: 50vh;
+    width: 100%;
+    font-size: 16px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
