--- a/client/src/Components/Subcomponents/Navbar.css
+++ b/client/src/Components/Subcomponents/Navbar.css
@@ -64,7 +64,12 @@ nav {
 
 .profile-link {
     text-decoration: none;
-    font-size: 5px;
+    font-size: 25px;
     font-family: Klavika;
     color: #404EEC;
+}
+
+.search-res {
+    position: absolute;
+    left: 27.5vw;
 }
