--- a/client/src/Components/Feed.css
+++ b/client/src/Components/Feed.css
@@ -20,7 +20,7 @@
 .feed-content {
     width: 100%;
     display: grid;
-    grid-template-columns: 27.5vw 42.5vw 30vw;
+    grid-template-columns: 15vw 50vw 35vw;
     margin-top: 3vh;
 }
 
@@ -99,30 +99,23 @@
 }
 
 .side1 {
-    width: 27.5vw;
+    width: 15vw;
     height: 100%;
     display: flex;
     justify-content: center;
-}
-
-.profile-corner {
-    height: 50vh;
-    width: 23vw;
-    background-color: white;
-    border-radius: 10px;
-    position: fixed;
 }
 
 .side2 {
-    width: 30vw;
+    width: 35vw;
     height: 100%;
     display: flex;
-    justify-content: center;
+    position: relative;
+    left: 5vw;
 }
 
 .community-tab {
     height: 60vh;
-    width: 25vw;
+    width: 20vw;
     background-color: white;
     border-radius: 10px;
     position: fixed;
