--- a/client/src/Components/Feed.css
+++ b/client/src/Components/Feed.css
@@ -20,7 +20,7 @@
 .feed-content {
     width: 100%;
     display: grid;
-    grid-template-columns: 15vw 50vw 35vw;
+    grid-template-columns: 20vw 50vw 30vw;
     margin-top: 3vh;
 }
 
@@ -99,18 +99,25 @@
 }
 
 .side1 {
-    width: 15vw;
+    width: 20vw;
     height: 100%;
     display: flex;
     justify-content: center;
 }
 
+.profile-corner {
+    width: 15vw;
+    height: 40vh;
+    background-color: white;
+    border-radius: 10px;
+    position: fixed;
+}
+
 .side2 {
-    width: 35vw;
+    width: 30vw;
     height: 100%;
     display: flex;
-    position: relative;
-    left: 5vw;
+    justify-content: center;
 }
 
 .community-tab {
@@ -119,7 +126,6 @@
     background-color: white;
     border-radius: 10px;
     position: fixed;
-    
 }
 
 .create-comm {
@@ -143,7 +149,7 @@ input[type=search]{
 
 .place-at-left-bottom {
     height: 30vh;
-    width: 27.5vw;
+    width: 20vw;
     position: fixed;
     bottom: 0px;
     left: 0px;
