--- a/client/src/Components/Feed.css
+++ b/client/src/Components/Feed.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins:wght@300;400;500;600;display=swap");
+
 .background-color-container {
     background-color: #aab1f4;
 }
@@ -10,6 +12,7 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    font-family: "Poppins", sans-serif;
 }
 
 .navbar-import {
@@ -20,7 +23,7 @@
 .feed-content {
     width: 100%;
     display: grid;
-    grid-template-columns: 20vw 50vw 30vw;
+    grid-template-columns: 25vw 50vw 25vw;
     margin-top: 3vh;
 }
 
@@ -28,13 +31,13 @@
     height: 100%;
     width: 100%;
     display: grid;
-    grid-template-rows: 15vh auto;
+    grid-template-rows: 10vh auto;
 }
 
 .user-post {
-    height: 15vh;
+    height: 10vh;
     width: 100%;
-    border-radius: 15px;
+    border-radius: 150px;
     background-color: white;
     border: 1px solid rgb(213, 213, 213)
 }
@@ -73,7 +76,7 @@
 
 .textbox > input {
     width: 95%;
-    height: 10vh;
+    height: 80%;
     min-height: 50px;
     border-radius: 50px;
     border: 1px solid rgb(212, 212, 212);
@@ -99,22 +102,49 @@
 }
 
 .side1 {
-    width: 20vw;
+    width: 25vw;
     height: 100%;
     display: flex;
     justify-content: center;
 }
 
 .profile-corner {
-    width: 15vw;
-    height: 40vh;
+    width: 20vw;
+    height: 10vh;
     background-color: white;
-    border-radius: 10px;
+    border-radius: 15px;
     position: fixed;
 }
 
+.page-select-tab {
+    padding-top: 1vh;
+    padding-top: 1vh;
+    width: 20vw;
+    height: 44vh;
+    top: 25vh;
+    border-radius: 15px;
+    background-color: white;
+    align-items: center;
+    position: fixed;
+}
+
+.page-select-tab > a {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 6vh;
+    text-decoration: none;
+    color: black;
+}
+
+.page-select-tab > a:hover {
+    background-color: lightgrey;
+    color: white;
+}
+
 .side2 {
-    width: 30vw;
+    width: 25vw;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -141,7 +171,6 @@ input[type=search]{
     width: 30vw;
     position: fixed;
     bottom: 0px;
-    right: 0px;
     z-index: 1;
     padding: 0px;
     margin: 0px;
@@ -152,7 +181,6 @@ input[type=search]{
     width: 20vw;
     position: fixed;
     bottom: 0px;
-    left: 0px;
     z-index: 1;
     padding: 0px;
     margin: 0px;
