--- a/client/src/Components/Subcomponents/Posts.css
+++ b/client/src/Components/Subcomponents/Posts.css
@@ -8,6 +8,7 @@
     margin-top: 5vh;
     border: 1px solid rgb(213, 213, 213);
     padding: 10px;
+    border-radius: 10px;
 }
 
 .indiv-post-container:hover {
