--- a/client/src/Components/Subcomponents/Posts.css
+++ b/client/src/Components/Subcomponents/Posts.css
@@ -1,6 +1,6 @@
 .indiv-post-container {
     min-height: 15vh;
-    width: 100%;
+    width: 50vw;
     background-color: white;
     display: flex;
     justify-content: center;
